--- a/.gear/rules
+++ b/.gear/rules
@@ -1,3 +1,3 @@
-tar: v@version@:. base=@name@-@version@/@name@
+tar: v@version@:.
 diff: v@version@:. @name@ name=@name@-@version@-alt.patch
 copy: .gear/*.watch
